# cargo-tpl

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh
src/: main.rs
src/templates-bin/: Cargo.toml.tpl
src/templates-bin/src/: main.rs.tpl
src/templates-common/: gitignore.tpl
src/templates-lib/: Cargo.toml.tpl
src/templates-lib/benches/: benchmark.rs.tpl
src/templates-workspace/: Cargo.toml.tpl
src/templates-workspace/crates/package_cli/: Cargo.toml.tpl
src/templates-workspace/crates/package_cli/src/: main.rs.tpl
src/templates-workspace/crates/package_lib/: Cargo.toml.tpl
